--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,11 +56,18 @@
     <Analyzer Include="D:\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Singleton\MonoSingleton.cs" />
+    <Compile Include="Assets\Scripts\Singleton\SpawnManager.cs" />
     <Compile Include="Assets\Scripts\Enum\EnemyAI.cs" />
     <Compile Include="Assets\Scripts\Enum\Item.cs" />
+    <Compile Include="Assets\Scripts\Singleton\InputManager.cs" />
+    <Compile Include="Assets\Scripts\Singleton\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Singleton\UIManager.cs" />
+    <Compile Include="Assets\Scripts\Singleton\LevelManager.cs" />
     <Compile Include="Assets\Scripts\AI.cs" />
     <Compile Include="Assets\Scripts\Enum\SizeChange.cs" />
     <Compile Include="Assets\Scripts\Enum\ItemDB.cs" />
+    <Compile Include="Assets\Player.cs" />
     <Compile Include="Assets\Scripts\Enum\SelectDifficulty.cs" />
   </ItemGroup>
   <ItemGroup>
